--- a/agreement/french/privacy_policy.html
+++ b/agreement/french/privacy_policy.html
@@ -8,26 +8,26 @@
 <body>
 <h3>Politique de Confidentialité</h3>
 
-<p>Cette politique contient des informations relatives à votre vie privée lors de la présentation un commentaire. En soumettant un commentaire, vous déclarez que vous comprenez cette politique:</p>
+<p>Cette politique contient des informations relatives à votre vie privée lors de la soumission d'un commentaire. En soumettant un commentaire, vous déclarez que vous comprenez cette politique&nbsp;:</p>
 
 <ul>
-  <li>Votre nom, adresse du site Web, ville, pays, de notation et un commentaire sera affiché publiquement s'il a été conclu.</li>
-  <li>Outre les données saisies dans ces champs de formulaire, d'autres données stockées sur vos commentaires seront les suivantes:
+  <li>Votre nom, adresse de site Web, ville, pays, note et commentaire seront publiquement affichés s'ils ont été saisis.</li>
+  <li>Outre les données saisies dans ces champs de formulaire, les autres données conservées sur vos commentaires sont les inclueront&nbsp;:
 	<ul>
-	  <li>Votre adresse IP (pas affiché)</li>
-	  <li>La date / heure de votre présentation (affiché)</li>
+	  <li>Votre adresse IP (non affichée)</li>
+	  <li>La date/heure de votre soumission (affichée)</li>
 	</ul>
   </li>
-  <li>Votre adresse email ne sera pas partagée. Ils sont recueillis que pour deux raisons:
+  <li>Votre adresse email ne sera pas partagée. Elle n'est recueillie que pour deux raisons&nbsp;:
 	<ul>
-	  <li>Fins administratives, en cas de besoin de vous contacter survenir.</li>
-	  <li>Pour vous informer des nouveaux commentaires, si vous abonner pour recevoir les notifications.</li>
+	  <li>À des fins administratives, au cas où il soit nécessaire de vous contacter.</li>
+	  <li>Pour vous informer de nouveaux commentaires, si vous vous abonnez aux notifications.</li>
 	</ul>
   </li>
-  <li>Un cookie peut être réglé sur votre ordinateur. Il est utilisé pour vous rappeler votre intrants. Il prendra fin en soi après une certaine période de temps.</li>
+  <li>Un cookie peut être enregistré sur votre ordinateur. Il est utilisé pour mémoriser vos entrées. Il sera détruit au bout d'un certain temps.</li>
 </ul>
 
-<p>Cette politique est sujette à changement à tout moment et sans préavis.</p>
+<p>Cette politique peut changer à tout moment et sans préavis.</p>
 
 </body>
 </html>
