--- a/agreement/french/terms_and_conditions.html
+++ b/agreement/french/terms_and_conditions.html
@@ -8,17 +8,18 @@
 <body>
 <h3>Termes et Conditions</h3>
 
-<p>Ces termes et conditions contiennent des règles relatives à la soumission de commentaires. En soumettant un commentaire, vous déclarez que vous êtes d'accord avec ces règles:</p>
+<p>Ces termes et conditions contiennent des règles relatives à la soumission de commentaires. En soumettant un commentaire, vous déclarez que vous êtes d'accord avec ces règles&nbsp;:</p>
 
 <ul>
-  <li>L'administrateur va tenter de modérer les commentaires, il est impossible pour chaque commentaire a été modéré à un moment donné. Vous admettez donc que tous les commentaires expriment la vue et opinions de l'auteur original et non pas celles de l'administrateur.</li>
+    <li>Bien que l'administrateur tente de modérer les commentaires, il est possible que des commentaires n'aient pas encore été modérés à un instant donné.</li>
+    <li>Vous admettez que tous les commentaires expriment les vues et opinions de leur auteur original et non pas celles de l'administrateur.</li>
   <li>Vous acceptez de ne poster aucun matériel qui seraient sciemment faux, obscène, haineux, menaçant, harcelant, envahissant la vie privée d'une personne, ou contraire aux lois.</li>
   <li>L'administrateur a le droit de modifier, déplacer ou supprimer un commentaire pour une raison quelconque et sans préavis.</li>
 </ul>
 
-<p>Défaut de se conformer à ces règles peut entraîner être interdit de commenter davantage.</p>
+<p>La non-conformité à ces règles peut entraîner l'interdiction de commenter davantage.</p>
 
-<p>Ces termes et conditions sont sujettes à modification à tout moment et sans préavis.</p>
+<p>Ces termes et conditions peuvent changer à tout moment et sans préavis.</p>
 
 </body>
 </html>
