Minor language changes.

--- a/agreement/english/privacy_policy.html
+++ b/agreement/english/privacy_policy.html
@@ -14,7 +14,7 @@
 	<li>Your name, website address, town, country, rating and comment will be publicly displayed if entered.</li>
 	<li>Aside from the data entered into these form fields, other stored data about your comment will include:
 		<ul>
-			<li>Your IP Address (not displayed)</li>
+			<li>Your IP address (not displayed)</li>
 			<li>The time/date of your submission (displayed)</li>
 		</ul>
 	</li>
